<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android_Prj</string>
    <string name="menu_settings">Settings</string>
    <string name="loading">加载中...</string>
    
    <!-- <string name="btn_convert">退出当前账户</string> -->
    
    <string name="btn_cancel">取消</string>
    <string name="btn_reverse">切 换</string>
    <string name="view_info">欢迎来到聊天室</string>
    <string name="exit_tip">你确定要退出吗 ？</string>
    <string name="yes_btn">确定</string>
    <string name="no_btn">取消</string>
    <string name="btn_selimage">选择头像</string>
    <string name="btn_camera">拍照</string>
    <string name="btn_normal_voice">按住 说话</string>
    <string name="btn_press_voice">松开 结束</string>
    <string name="btn_photo">从相册选择</string>
    <string name="tip_input">输入框内容不能为空！</string>
    <string name="record_short">录音时间太短！</string>
    <string name="image_input">请选择要上传的头像！</string>
    
    <string name="click_yes">是</string>
    <string name="click_no">否</string>
    
    <string name="click_back">返 回</string>
    <string name="click_okay">确 定</string>
    <string name="click_cancel">取 消</string>
    <string name="click_quit">退出登录</string>
    <string name="press_say_start">按住 说话</string>
    <string name="press_say_over">松开 结束</string>
    
    
    <string name="unload_device">存储设备未挂载</string>
    <string name="net_success">您的网络已连接</string>
    <string name="net_failure">无可用的网络，请确认！</string>
    <string name="conn_failure">连接服务器失败！</string>
    <string name="no_response">服务无响应!</string>
    <string name="response_exist">用户已存在!</string>
    
    <string name="logout">注销用户</string>
    <string name="logining">登录中...</string>
    <string name="registering">注册中...</string>
    <string name="login_failure">登录失败</string>
    <string name="login_success">成功登录</string>
    <string name="register_failure">注册失败</string>
    <string name="register_success">成功注册</string>
    <string name="register_agree">已阅读并同意</string>
    <string name="register_clause">《xx服务条款》</string>
    <string name="accounts_tip">请输入您的邮箱帐号或者手机号</string>
    <string name="not_receiver">退出后，你将收不到新的消息.确定要退出？</string>
   
    <string name="go_register">注册帐号</string>
    <string name="forget_pwd">忘记密码</string>
    
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    
    <string name="user_name">帐 号</string>
    <string name="user_pwd">密 码</string>
    
    <string name="un_logined">未登录</string>
    <string name="btn_chatting">发 送</string>
    
    <string name="message_total">总共</string>
	<string name="message_count">条</string>
    <string name="offline_settings">消息设置</string>
	<string name="offline_receiver">接收离线消息</string>
	<string name="sound_warming">铃声提醒</string>
	<string name="vibrate_warming">震动提醒</string>
	<string name="sys_notice">系统公告!</string>
	<string name="new_notice">有您新的消息！</string>
	
	 <string name="authorize_error">百度地图授权错误!</string>
</resources>